--- a/OzzCodeGen/AspNetMvcGen.settings
+++ b/OzzCodeGen/AspNetMvcGen.settings
@@ -23,7 +23,6 @@
       </Properties>
       <ControllerName>IPrimaryKeys</ControllerName>
       <DataSetName>IPrimaryKeys</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>IPrimaryKey</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -78,7 +77,6 @@
       </Properties>
       <ControllerName>ICreateds</ControllerName>
       <DataSetName>ICreateds</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>ICreated</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -144,7 +142,6 @@
       </Properties>
       <ControllerName>IModifieds</ControllerName>
       <DataSetName>IModifieds</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>IModified</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -169,8 +166,8 @@
           <UseInSearch>false</UseInSearch>
           <InIndexView>true</InIndexView>
           <InDetailsView>true</InDetailsView>
-          <InCreateView>true</InCreateView>
-          <InEditView>true</InEditView>
+          <InCreateView>false</InCreateView>
+          <InEditView>false</InEditView>
           <HasValidation>true</HasValidation>
           <UseForEdit>Standart</UseForEdit>
         </AspNetMvcPropertySetting>
@@ -210,7 +207,6 @@
       </Properties>
       <ControllerName>IApprovals</ControllerName>
       <DataSetName>IApprovals</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>IApproval</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -265,7 +261,6 @@
       </Properties>
       <ControllerName>IDescriptions</ControllerName>
       <DataSetName>IDescriptions</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>IDescription</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -397,7 +392,7 @@
       </Properties>
       <ControllerName>Contacts</ControllerName>
       <DataSetName>Contacts</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
+      <ForeignKeyForCreate>CompanyId</ForeignKeyForCreate>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>Contact</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -551,7 +546,6 @@
       </Properties>
       <ControllerName>Companies</ControllerName>
       <DataSetName>Companies</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>Company</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -584,7 +578,6 @@
       </Properties>
       <ControllerName>Suppliers</ControllerName>
       <DataSetName>Companies</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>Supplier</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -628,7 +621,6 @@
       </Properties>
       <ControllerName>Customers</ControllerName>
       <DataSetName>Companies</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>Customer</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -694,7 +686,6 @@
       </Properties>
       <ControllerName>ProductCategories</ControllerName>
       <DataSetName>ProductCategories</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>ProductCategory</ModelForEdit>
       <RolesCanView>everyone</RolesCanView>
@@ -738,7 +729,6 @@
       </Properties>
       <ControllerName>Products</ControllerName>
       <DataSetName>Products</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>Product</ModelForEdit>
       <RolesCanView>everyone</RolesCanView>
@@ -827,7 +817,7 @@
           <Name>Description</Name>
           <Exclude>false</Exclude>
           <UseInSearch>true</UseInSearch>
-          <InIndexView>true</InIndexView>
+          <InIndexView>false</InIndexView>
           <InDetailsView>true</InDetailsView>
           <InCreateView>true</InCreateView>
           <InEditView>true</InEditView>
@@ -835,10 +825,21 @@
           <UseForEdit>TextBox</UseForEdit>
         </AspNetMvcPropertySetting>
         <AspNetMvcPropertySetting>
+          <Name>OrderItems</Name>
+          <Exclude>false</Exclude>
+          <UseInSearch>false</UseInSearch>
+          <InIndexView>true</InIndexView>
+          <InDetailsView>true</InDetailsView>
+          <InCreateView>false</InCreateView>
+          <InEditView>false</InEditView>
+          <HasValidation>true</HasValidation>
+          <UseForEdit>Standart</UseForEdit>
+        </AspNetMvcPropertySetting>
+        <AspNetMvcPropertySetting>
           <Name>Notes</Name>
           <Exclude>false</Exclude>
           <UseInSearch>true</UseInSearch>
-          <InIndexView>true</InIndexView>
+          <InIndexView>false</InIndexView>
           <InDetailsView>true</InDetailsView>
           <InCreateView>true</InCreateView>
           <InEditView>true</InEditView>
@@ -848,7 +849,7 @@
       </Properties>
       <ControllerName>PuchaseOrders</ControllerName>
       <DataSetName>PuchaseOrders</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
+      <ForeignKeyForCreate>CustomerId</ForeignKeyForCreate>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>PuchaseOrder</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -876,7 +877,7 @@
           <InCreateView>true</InCreateView>
           <InEditView>true</InEditView>
           <HasValidation>true</HasValidation>
-          <UseForEdit>DropDownList</UseForEdit>
+          <UseForEdit>HiddenInput</UseForEdit>
         </AspNetMvcPropertySetting>
         <AspNetMvcPropertySetting>
           <Name>PuchaseOrder</Name>
@@ -936,7 +937,6 @@
       </Properties>
       <ControllerName>OrderItems</ControllerName>
       <DataSetName>OrderItems</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>OrderItem</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -967,12 +967,12 @@
           <UseForEdit>TextBox</UseForEdit>
         </AspNetMvcPropertySetting>
         <AspNetMvcPropertySetting>
-          <Name>IsCompleted </Name>
+          <Name>IsCompleted</Name>
           <Exclude>false</Exclude>
           <UseInSearch>false</UseInSearch>
           <InIndexView>true</InIndexView>
           <InDetailsView>true</InDetailsView>
-          <InCreateView>true</InCreateView>
+          <InCreateView>false</InCreateView>
           <InEditView>true</InEditView>
           <HasValidation>true</HasValidation>
           <UseForEdit>Standart</UseForEdit>
@@ -1018,7 +1018,7 @@
           <InDetailsView>false</InDetailsView>
           <InCreateView>true</InCreateView>
           <InEditView>true</InEditView>
-          <HasValidation>true</HasValidation>
+          <HasValidation>false</HasValidation>
           <UseForEdit>HiddenInput</UseForEdit>
         </AspNetMvcPropertySetting>
         <AspNetMvcPropertySetting>
@@ -1029,24 +1029,24 @@
           <InDetailsView>true</InDetailsView>
           <InCreateView>false</InCreateView>
           <InEditView>false</InEditView>
-          <HasValidation>true</HasValidation>
+          <HasValidation>false</HasValidation>
           <UseForEdit>Standart</UseForEdit>
         </AspNetMvcPropertySetting>
         <AspNetMvcPropertySetting>
           <Name>ProcessSteps</Name>
           <Exclude>false</Exclude>
           <UseInSearch>false</UseInSearch>
-          <InIndexView>true</InIndexView>
+          <InIndexView>false</InIndexView>
           <InDetailsView>true</InDetailsView>
-          <InCreateView>true</InCreateView>
+          <InCreateView>false</InCreateView>
           <InEditView>true</InEditView>
-          <HasValidation>true</HasValidation>
+          <HasValidation>false</HasValidation>
           <UseForEdit>Standart</UseForEdit>
         </AspNetMvcPropertySetting>
       </Properties>
       <ControllerName>Processes</ControllerName>
       <DataSetName>Processes</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
+      <ForeignKeyForCreate>OrderItemId</ForeignKeyForCreate>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>Process</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -1077,7 +1077,7 @@
           <UseForEdit>ReadOnlyDisplay</UseForEdit>
         </AspNetMvcPropertySetting>
         <AspNetMvcPropertySetting>
-          <Name>IsCompleted </Name>
+          <Name>IsCompleted</Name>
           <Exclude>false</Exclude>
           <UseInSearch>false</UseInSearch>
           <InIndexView>true</InIndexView>
@@ -1167,7 +1167,6 @@
       </Properties>
       <ControllerName>ProcessSteps</ControllerName>
       <DataSetName>ProcessSteps</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>ProcessStep</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -1214,15 +1213,15 @@
           <UseInSearch>false</UseInSearch>
           <InIndexView>true</InIndexView>
           <InDetailsView>true</InDetailsView>
-          <InCreateView>true</InCreateView>
+          <InCreateView>false</InCreateView>
           <InEditView>true</InEditView>
-          <HasValidation>true</HasValidation>
+          <HasValidation>false</HasValidation>
           <UseForEdit>Standart</UseForEdit>
         </AspNetMvcPropertySetting>
       </Properties>
       <ControllerName>ProcessTemplates</ControllerName>
       <DataSetName>ProcessTemplates</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
+      <ForeignKeyForCreate />
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>ProcessTemplate</ModelForEdit>
       <RolesCanView>users</RolesCanView>
@@ -1288,7 +1287,7 @@
       </Properties>
       <ControllerName>ProcessStepTemplates</ControllerName>
       <DataSetName>ProcessStepTemplates</DataSetName>
-      <DataContextClass>CriticalPathContext</DataContextClass>
+      <ForeignKeyForCreate>ProcessTemplateId</ForeignKeyForCreate>
       <SaveParameter>this</SaveParameter>
       <ModelForEdit>ProcessStepTemplate</ModelForEdit>
       <RolesCanView>users</RolesCanView>
